add css style code and edit to html body.

--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div id="jsqg_info_box">
             <div class="jsqg_info_head">Rules for this Quiz</div>
             <div class="jsqg_info_list">
-                <div>1. You only have 80 seconds for each question.</div>
-                <div>2. Once you selected your option it can't be undone</div>
-                <div>3. Every incorrect answer subtracts 15 seconds from your timer</div>
-                <div>4. If you run out of time the correct answers will be shown and so will your score</div>
+                <div>1. You only have 60 seconds to answer all questions.</div>
+                <div>2. Once you selected your option it cannot be undone.</div>
+                <div>3. Every incorrect answer subtracts 15 seconds from your timer.</div>
+                <div>4. If you run out of time the correct answers will be shown and so will your score.</div>
             </div>
             <div class="jsqg_info_folder">
                 <button class="jsqg_btn" id="jsqg_start">Start</button>
