--- a/index.html
+++ b/index.html
@@ -1,51 +1,74 @@
 <!DOCTYPE html>
-<html lang="en-gb"></head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scle=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Javascript Quiz Game</title>
-<link rel="stylesheet" href="assets/style.css">
+<html lang="en-gb">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Javascript Quiz Game</title>
+  <link rel="stylesheet" href="assets/style.css">
 </head>
+
 <body>
-
-<div class="jsqg-container" id="jsqg_box">
-    <div class="jsqg_header" style="display: none;">
-    <div class="jsqg_head_text">Javascript Quiz Game</div>
-    <div class="jsqg_time_left">Time Left <div id="jsqg_timer">80</div> </div>   
-    
-    </div>
-    <div class="jsqg_body">
-
-        <div id="jsqg_info_box">
-            <div class="jsqg_info_head">Rules for this Quiz</div>
-            <div class="jsqg_info_list">
-                <div>1. You only have 60 seconds to answer all questions.</div>
-                <div>2. Once you selected your option it cannot be undone.</div>
-                <div>3. Every incorrect answer subtracts 15 seconds from your timer.</div>
-                <div>4. If you run out of time the correct answers will be shown and so will your score.</div>
-            </div>
-            <div class="jsqg_info_folder">
-                <button class="jsqg_btn" id="jsqg_start">Start</button>
-            </div>
+    <header>
+        <div class="Scores">
+            <a id="highscore-link">View High Scores</a>
         </div>
-        
-        <div class="jsqg_main_content" style="display: none;">
-            <h1 id="jsqg_question"></h1>
-            <div id="jsqg_code_box"><pre class="language-js"><code></code></pre></div>
-            <div id="jsqg_options"></div>
+        <div id="timer" class="timer">Time: 60</div>
+    </header>
+
+    <section id="start-container" class="start-quiz">
+        <h1>Welcome to the Quiz Game</h1>
+        <p>
+            1. You have 60 seconds to complete this quiz.
+            2. Every incorrect answer will mark you down 15 seconds from your timer.
+            3. Your score will be shown at the end of the quiz.
+        </p>
+        <div class="controls">
+            <button id="start-btn" class="start-btn">Start Quiz</button>
         </div>
+        </section>
 
-    </div>
+        <section id="question-container" class="hide">
+            <h1 id="question">Question</h1>
+            <div id="answer-buttons" class="btn-grid">
+                <button class="btn">Answer 1</button>
+                <button class="btn">Answer 2</button>
+                <button class="btn">Answer 3</button>
+                <button class="btn">Answer 4</button>
+                <button class="btn">Answer 5</button>
+                <button class="btn">Answer 6</button>
+            </div>
+            <h2 id="check-answer" class="correct-wrong hide"></h2>
+            <div class="controls">
+                <button id="next-btn" class="next-btn hide">Next</button>
+            </div>
+        </section>
 
-    <div class="jsqg_footer" style="display: none;">
-        <button class="jsqg_btn" id="prev_question">Previous</button>
-        <div id="jsqg_total">1 of 6 Questions</div>
-        <button class="jsqg_btn" id="next_question">Next</button>
-    </div>
-</div>
+        <section id="score-container" class="hide">
+            <form id="submit-form">
+                <h3 id="your-score">Score</h3>
+                <label id="initials-label">Enter you name to save your score:</label>
+                <input type="text" id="initials-field" maxlength="30" placeholder="Enter Name"/>
+                <button id="submit-btn">Submit</button>
+            </form>
+        </section>
 
-<script src="assets/script.js"></script>
+        <section id="highscores" class="highscores-container hide">
+            <div id="high-scores">
+                <h1 class="centered">Scoreboard</h1>
+                <div id="highscore" class="highscore highscore-list">
+                </div>
+                <div class="controls">
+                    <button id="restart-btn">Restart</button>
+                    <button id="clear-btn">Clear</button>
+                </div>
+            </div>
+        </section>
 
+        <script src="assets/script.js"></script>
 </body>
 
 </html>
+
+
+  
