--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <form id="submit-form">
                 <h3 id="your-score">Score</h3>
                 <label id="initials-label">Enter you name to save your score:</label>
-                <input type="text" id="initials-field" maxlength="30" placeholder="Enter Name"/>
+                <input type="text" id="name-field" maxlength="30" placeholder="Enter Name"/>
                 <button id="submit-btn">Submit</button>
             </form>
         </section>
