fix bugs in javascript.

--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
             </div>
         </section>
 
+        <script src="assets/questions.js"></script>
         <script src="assets/script.js"></script>
 </body>
 
